syntax = "proto3";

package logpb;


message Log {
    string service_name =1;
    string error_message =2;
    string stack_trace =3;
}

message LogRequest{
    Log log =1;
}
message LogResponse{
    string message=1;
}
service LogService {
    rpc InsertLog(LogRequest) returns (LogResponse);
}

// protoc --plugin="protoc-gen-ts=. --js_out="import_style=commonjs,binary:${OUT_DIR}" --ts_out=.  logspb/logs.proto 

// PROTOC_GEN_TS_PATH="./node_modules/.bin/protoc-gen-ts"

// OUT_DIR="./generated"

// protoc \
//     --plugin=protoc-gen-ts=./node_modules/.bin/protoc-gen-ts \
//     --js_out=import_style=commonjs,binary:. \
//     --ts_out=. \
//     logspb/logs.proto